--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "57780c9b",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,10 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import plotly.express as px"
+    "import plotly.express as px\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "from wordcloud import WordCloud, STOPWORDS"
    ]
   },
   {
@@ -31,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d5fc54fb",
    "metadata": {},
    "outputs": [],
@@ -4128,6 +4131,85 @@
     "\t)\n",
     "\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02089b14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\davutbayik\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Wordcloud of positive and negative sentiments\n",
+    "\n",
+    "# Download stopwords if you haven't already\n",
+    "nltk.download('stopwords')\n",
+    "\n",
+    "# Define custom gaming stopwords to remove\n",
+    "gaming_stopwords = ['game', 'games', 'play', 'playing', 'played', 'just', 'like', \n",
+    "                    'good', 'bad', 'really', 'much', 'even', 'well', 'will', 'time']\n",
+    "\n",
+    "# Combine with standard English stopwords\n",
+    "all_stopwords = set(list(STOPWORDS) + list(stopwords.words('english')) + gaming_stopwords)\n",
+    "\n",
+    "# Split the dataset into positive and negative reviews\n",
+    "positive_reviews = df.query(\"sentiment == 'Positive'\")['quote'].str.lower().tolist()\n",
+    "negative_reviews = df.query(\"sentiment == 'Negative'\")['quote'].str.lower().tolist()\n",
+    "\n",
+    "# Combine all positive and negative reviews respectively\n",
+    "positive_text = ' '.join(positive_reviews)\n",
+    "negative_text = ' '.join(negative_reviews)\n",
+    "\n",
+    "# Create word clouds\n",
+    "plt.figure(figsize=(20, 10))\n",
+    "\n",
+    "# Positive word cloud\n",
+    "plt.subplot(1, 2, 1)\n",
+    "positive_wordcloud = WordCloud(\n",
+    "    background_color='white',\n",
+    "    max_words=100,\n",
+    "    stopwords=all_stopwords,\n",
+    "    max_font_size=90,\n",
+    "    random_state=42,\n",
+    "    width=800,\n",
+    "    height=400,\n",
+    "    colormap='viridis'\n",
+    ").generate(positive_text)\n",
+    "\n",
+    "plt.imshow(positive_wordcloud, interpolation='bilinear')\n",
+    "plt.title('Positive Reviews Word Cloud', fontsize=20)\n",
+    "plt.axis('off')\n",
+    "\n",
+    "# Negative word cloud\n",
+    "plt.subplot(1, 2, 2)\n",
+    "negative_wordcloud = WordCloud(\n",
+    "    background_color='white',\n",
+    "    max_words=100,\n",
+    "    stopwords=all_stopwords,\n",
+    "    max_font_size=90,\n",
+    "    random_state=42,\n",
+    "    width=800,\n",
+    "    height=400,\n",
+    "    colormap='magma'\n",
+    ").generate(negative_text)\n",
+    "\n",
+    "plt.imshow(negative_wordcloud, interpolation='bilinear')\n",
+    "plt.title('Negative Reviews Word Cloud', fontsize=20)\n",
+    "plt.axis('off')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('assets/sentiment_wordclouds.png', dpi=300)\n",
+    "plt.show()"
    ]
   }
  ],
