--- a/notebooks/train_model.ipynb
+++ b/notebooks/train_model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d25d4f8c",
    "metadata": {},
    "outputs": [],
@@ -21,6 +21,7 @@
     "import torch\n",
     "from sklearn.model_selection import train_test_split\n",
     "from transformers import BertTokenizer, BertForSequenceClassification, Trainer, TrainingArguments, DataCollatorWithPadding, TextClassificationPipeline\n",
+    "import evaluate\n",
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "import string\n",
@@ -31,8 +32,8 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "# Create data and model folders\n",
-    "os.makedirs(\"data\", exist_ok=True)\n",
-    "os.makedirs(\"model\", exist_ok=True)"
+    "os.makedirs(\"../data\", exist_ok=True)\n",
+    "os.makedirs(\"../model\", exist_ok=True)"
    ]
   },
   {
@@ -908,7 +909,7 @@
    "source": [
     "# Save the tuned model and the tokenizer\n",
     "\n",
-    "save_directory = \"tuned_model/metacritic_games_bert\" # Model directory for saving\n",
+    "save_directory = \"../model/metacritic_games_bert\" # Model directory for saving\n",
     "\n",
     "model.save_pretrained(save_directory)\n",
     "tokenizer.save_pretrained(save_directory)"
@@ -924,16 +925,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "9ac1e3cc",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the tuned model\n",
     "\n",
-    "model = BertForSequenceClassification.from_pretrained('model/metacritic_games_bert')\n",
+    "model = BertForSequenceClassification.from_pretrained('../model/metacritic_games_bert')\n",
     "model.to('cuda') # Use GPU\n",
-    "tokenizer = BertTokenizer.from_pretrained('model/metacritic_games_bert', model_max_length=512)\n",
+    "tokenizer = BertTokenizer.from_pretrained('../model/metacritic_games_bert', model_max_length=512)\n",
     "\n",
     "prediction_pipeline = TextClassificationPipeline(model=model, tokenizer=tokenizer, max_length=512, truncation=True, top_k=1, device=\"cuda\")"
    ]
@@ -1241,11 +1242,345 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a46fca25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>quote</th>\n",
+       "      <th>score</th>\n",
+       "      <th>date</th>\n",
+       "      <th>platform</th>\n",
+       "      <th>author</th>\n",
+       "      <th>publicationName</th>\n",
+       "      <th>review_type</th>\n",
+       "      <th>language</th>\n",
+       "      <th>labels</th>\n",
+       "      <th>sentiment</th>\n",
+       "      <th>sentiment_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1300001290</td>\n",
+       "      <td>The Legend of Zelda: Ocarina of Time</td>\n",
+       "      <td>an open world on the classic console, perhaps ...</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>2023-02-03</td>\n",
+       "      <td>Nintendo 64</td>\n",
+       "      <td>aaronnmp96</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>user</td>\n",
+       "      <td>en</td>\n",
+       "      <td>2</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>0.988269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1300001290</td>\n",
+       "      <td>The Legend of Zelda: Ocarina of Time</td>\n",
+       "      <td>This masterpiece holds a special place in the ...</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>2022-10-24</td>\n",
+       "      <td>Nintendo 64</td>\n",
+       "      <td>AmadouIraklidis</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>user</td>\n",
+       "      <td>en</td>\n",
+       "      <td>2</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>0.996237</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1300001290</td>\n",
+       "      <td>The Legend of Zelda: Ocarina of Time</td>\n",
+       "      <td>10 out of 10 easily one of the best games of h...</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>2023-01-31</td>\n",
+       "      <td>Nintendo 64</td>\n",
+       "      <td>slushy</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>user</td>\n",
+       "      <td>en</td>\n",
+       "      <td>2</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>0.995488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1300001290</td>\n",
+       "      <td>The Legend of Zelda: Ocarina of Time</td>\n",
+       "      <td>Absolutely the best game ever made. Completely...</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>2022-06-12</td>\n",
+       "      <td>Nintendo 64</td>\n",
+       "      <td>Konnor1224</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>user</td>\n",
+       "      <td>en</td>\n",
+       "      <td>2</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>0.994602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1300001290</td>\n",
+       "      <td>The Legend of Zelda: Ocarina of Time</td>\n",
+       "      <td>the people rating this game a 0 will absolutel...</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>2022-11-21</td>\n",
+       "      <td>Nintendo 64</td>\n",
+       "      <td>Pokemandeluxe</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>user</td>\n",
+       "      <td>en</td>\n",
+       "      <td>2</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>0.986940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1486545</th>\n",
+       "      <td>1300145643</td>\n",
+       "      <td>Family Party: 30 Great Games Obstacle Arcade</td>\n",
+       "      <td>I'm really upset that it isn't illegal to sell...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2012-12-12</td>\n",
+       "      <td>Wii U</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Eurogamer Sweden</td>\n",
+       "      <td>critic</td>\n",
+       "      <td>en</td>\n",
+       "      <td>0</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>0.994341</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1486546</th>\n",
+       "      <td>1300145643</td>\n",
+       "      <td>Family Party: 30 Great Games Obstacle Arcade</td>\n",
+       "      <td>Do you want sad faces on Xmas? Do you like poi...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2012-12-12</td>\n",
+       "      <td>Wii U</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Gamereactor Denmark</td>\n",
+       "      <td>critic</td>\n",
+       "      <td>en</td>\n",
+       "      <td>0</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>0.835508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1486547</th>\n",
+       "      <td>1300145643</td>\n",
+       "      <td>Family Party: 30 Great Games Obstacle Arcade</td>\n",
+       "      <td>Family Party: 30 Great Games Obstacle Arcade i...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2013-01-05</td>\n",
+       "      <td>Wii U</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NintendoWorldReport</td>\n",
+       "      <td>critic</td>\n",
+       "      <td>en</td>\n",
+       "      <td>0</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>0.572072</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1486548</th>\n",
+       "      <td>1300145643</td>\n",
+       "      <td>Family Party: 30 Great Games Obstacle Arcade</td>\n",
+       "      <td>As clunky and poorly considered as its title, ...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2013-01-28</td>\n",
+       "      <td>Wii U</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Nintendo Life</td>\n",
+       "      <td>critic</td>\n",
+       "      <td>en</td>\n",
+       "      <td>0</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>0.958645</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1486549</th>\n",
+       "      <td>1300145643</td>\n",
+       "      <td>Family Party: 30 Great Games Obstacle Arcade</td>\n",
+       "      <td>Family Party is terrible. Not only is it bad, ...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2013-01-22</td>\n",
+       "      <td>Wii U</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Game Revolution</td>\n",
+       "      <td>critic</td>\n",
+       "      <td>en</td>\n",
+       "      <td>0</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>0.981939</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1486550 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 id                                         title  \\\n",
+       "0        1300001290          The Legend of Zelda: Ocarina of Time   \n",
+       "1        1300001290          The Legend of Zelda: Ocarina of Time   \n",
+       "2        1300001290          The Legend of Zelda: Ocarina of Time   \n",
+       "3        1300001290          The Legend of Zelda: Ocarina of Time   \n",
+       "4        1300001290          The Legend of Zelda: Ocarina of Time   \n",
+       "...             ...                                           ...   \n",
+       "1486545  1300145643  Family Party: 30 Great Games Obstacle Arcade   \n",
+       "1486546  1300145643  Family Party: 30 Great Games Obstacle Arcade   \n",
+       "1486547  1300145643  Family Party: 30 Great Games Obstacle Arcade   \n",
+       "1486548  1300145643  Family Party: 30 Great Games Obstacle Arcade   \n",
+       "1486549  1300145643  Family Party: 30 Great Games Obstacle Arcade   \n",
+       "\n",
+       "                                                     quote  score        date  \\\n",
+       "0        an open world on the classic console, perhaps ...  100.0  2023-02-03   \n",
+       "1        This masterpiece holds a special place in the ...  100.0  2022-10-24   \n",
+       "2        10 out of 10 easily one of the best games of h...  100.0  2023-01-31   \n",
+       "3        Absolutely the best game ever made. Completely...  100.0  2022-06-12   \n",
+       "4        the people rating this game a 0 will absolutel...  100.0  2022-11-21   \n",
+       "...                                                    ...    ...         ...   \n",
+       "1486545  I'm really upset that it isn't illegal to sell...   10.0  2012-12-12   \n",
+       "1486546  Do you want sad faces on Xmas? Do you like poi...   10.0  2012-12-12   \n",
+       "1486547  Family Party: 30 Great Games Obstacle Arcade i...   10.0  2013-01-05   \n",
+       "1486548  As clunky and poorly considered as its title, ...   10.0  2013-01-28   \n",
+       "1486549  Family Party is terrible. Not only is it bad, ...    0.0  2013-01-22   \n",
+       "\n",
+       "            platform           author      publicationName review_type  \\\n",
+       "0        Nintendo 64       aaronnmp96                  NaN        user   \n",
+       "1        Nintendo 64  AmadouIraklidis                  NaN        user   \n",
+       "2        Nintendo 64           slushy                  NaN        user   \n",
+       "3        Nintendo 64       Konnor1224                  NaN        user   \n",
+       "4        Nintendo 64    Pokemandeluxe                  NaN        user   \n",
+       "...              ...              ...                  ...         ...   \n",
+       "1486545        Wii U              NaN     Eurogamer Sweden      critic   \n",
+       "1486546        Wii U              NaN  Gamereactor Denmark      critic   \n",
+       "1486547        Wii U              NaN  NintendoWorldReport      critic   \n",
+       "1486548        Wii U              NaN        Nintendo Life      critic   \n",
+       "1486549        Wii U              NaN      Game Revolution      critic   \n",
+       "\n",
+       "        language  labels sentiment  sentiment_score  \n",
+       "0             en       2  positive         0.988269  \n",
+       "1             en       2  positive         0.996237  \n",
+       "2             en       2  positive         0.995488  \n",
+       "3             en       2  positive         0.994602  \n",
+       "4             en       2  positive         0.986940  \n",
+       "...          ...     ...       ...              ...  \n",
+       "1486545       en       0  negative         0.994341  \n",
+       "1486546       en       0  negative         0.835508  \n",
+       "1486547       en       0  negative         0.572072  \n",
+       "1486548       en       0  negative         0.958645  \n",
+       "1486549       en       0  negative         0.981939  \n",
+       "\n",
+       "[1486550 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "games_reviews"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "febb8e52",
+   "metadata": {},
+   "source": [
+    "### 4) Evaluate the BERT Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f5abe1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'accuracy': 0.857, 'precision': 0.852, 'recall': 0.857, 'f1': 0.854}"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Evaluate the fine-tuned BERT model using classification metrics\n",
+    "\n",
+    "test_reviews = games_reviews.loc[test_df[\"__index_level_0__\"]]\n",
+    "test_reviews[\"sentiment\"] = test_reviews[\"sentiment\"].apply(lambda x: 0 if x == \"negative\" else (1 if x == \"neutral\" else 2))\n",
+    "\n",
+    "eval_results = {}\n",
+    "eval_metrics = [\"accuracy\", \"precision\", \"recall\", \"f1\"]\n",
+    "\n",
+    "for eval_metric in eval_metrics:\n",
+    "\tmetric = evaluate.load(eval_metric)\n",
+    "\ttry:\n",
+    "\t\tresults = metric.compute(references=test_reviews[\"labels\"].values, predictions=test_reviews[\"sentiment\"].values, average=\"weighted\")\n",
+    "\texcept:\n",
+    "\t\tresults = metric.compute(references=test_reviews[\"labels\"].values, predictions=test_reviews[\"sentiment\"].values)\n",
+    "\teval_results[eval_metric] = round(results[eval_metric], 3)\n",
+    " \n",
+    "eval_results"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "61024c16",
    "metadata": {},
    "source": [
-    "### 4) Save the Sentimented Dataset"
+    "### 5) Save the Sentimented Dataset"
    ]
   },
   {
